tests/invalid/While_Invalid_2.whiley
method main(int[][] args) -> int:
    int i = 0
    int r = 0
    //
    while i < |args| where j > 0:
        r = r + |args[i]|
    //
    return r
